# service-mcp-client

./: Dockerfile  README.md  pyproject.toml
app/: __init__.py  chat.py  config.py  cors.py  health.py  model_provider.py
app/routers/: __init__.py  chat.py  health.py  models.py
app/schemas/: __init__.py  models.py
services/: mcp_client.py
ui/: docker-compose.yml  env.d.ts  package-lock.json  package.json  vite.config.mts
ui/src/: App.vue  components.d.ts  main.ts
ui/src/assets/: markdown.scss
ui/src/components/: ChatView.vue  ModelSelector.vue  PromptBox.vue
ui/src/components/MessageView/: AIMessage.vue  HumanMessage.vue  index.vue
ui/src/plugins/: index.ts  vuetify.ts
ui/src/stores/: activeChat.ts
ui/src/types/: chat.ts
