[project]
name = "service-mcp-client"
version = "0.1.0"
description = "A bridge for OpenRemote to communicate with AI models like ChatGPT or Claude. And provide configuration to connect them to tools using MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "openremote-client==1.1.3",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-google-genai>=4.1.3",
]
